view fyrir sellers

--- a/.build/index.html
+++ b/.build/index.html
@@ -21,12 +21,24 @@
 	
 	<toaster-container></toaster-container>
 	<!-- inject:vendor:js -->
+	<script src="src/vendor/angular/angular.js"></script>
+	<script src="src/vendor/jquery/dist/jquery.js"></script>
+	<script src="src/vendor/angular-route/angular-route.js"></script>
+	<script src="src/vendor/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+	<script src="src/vendor/angular-translate/angular-translate.js"></script>
+	<script src="src/vendor/angular-toastr/dist/angular-toastr.tpls.js"></script>
+	<script src="src/vendor/angular-mocks/angular-mocks.js"></script>
+	<script src="src/vendor/lodash/lodash.js"></script>
+	<script src="src/vendor/bootstrap/dist/js/bootstrap.js"></script>
 	<!-- endinject -->
 
 	<!-- inject:app:js -->
+	<script src="scripts/app-21582423.js"></script>
+	<script src="scripts/appconfig.js"></script>
 	<!-- endinject -->
 
 	<!-- inject:templates:js -->
+	<script src="scripts/templates-c8b3eb8e.js"></script>
 	<!-- endinject -->
 </body>
 
