sellers list og add seller komid..

--- a/.build/index.html
+++ b/.build/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
 <body>
-	<main class="container-fluid " style="padding-top: 50px;">
+	<main class="container-fluid col-lg-10 col-lg-offset-1" style="padding-top: 50px;">
 		<div class="jumbotron">
 			<div class="Main clearfix" ng-view id="content"></div>
 		</dir>
@@ -33,12 +33,12 @@
 	<!-- endinject -->
 
 	<!-- inject:app:js -->
-	<script src="scripts/app-21582423.js"></script>
+	<script src="scripts/app-c9bff744.js"></script>
 	<script src="scripts/appconfig.js"></script>
 	<!-- endinject -->
 
 	<!-- inject:templates:js -->
-	<script src="scripts/templates-c8b3eb8e.js"></script>
+	<script src="scripts/templates-89a16f34.js"></script>
 	<!-- endinject -->
 </body>
 
