--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
 <body>
-	<main class="container-fluid " style="padding-top: 50px;">
+	<main class="container-fluid col-lg-10 col-lg-offset-1" style="padding-top: 50px;">
 		<div class="jumbotron">
 			<div class="Main clearfix" ng-view id="content"></div>
 		</dir>
