--- a/.build/index.html
+++ b/.build/index.html
@@ -9,15 +9,14 @@
 	<!--<script src="app.js"></script>
 	<script scr="/components/sellers/SellersController.js"</script>-->
 	
-	<script src="src/vendor/jquery/dist/jquery.js"></script>
+	<!--<script src="src/vendor/jquery/dist/jquery.js"></script>-->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
 <body>
-	<main class="container-fluid col-lg-10 col-lg-offset-1" style="padding-top: 50px;">
-		<div class="jumbotron">
+	<main class="container-fluid col-lg-10 col-lg-offset-1" style="padding-top: 50px; padding-bottom: 50px">
+
 			<div class="Main clearfix" ng-view id="content"></div>
-		</dir>
 	</main>
 	
 	<toaster-container></toaster-container>
@@ -34,12 +33,12 @@
 	<!-- endinject -->
 
 	<!-- inject:app:js -->
-	<script src="scripts/app-f259e8bc.js"></script>
+	<script src="scripts/app-39a51ec7.js"></script>
 	<script src="scripts/appconfig.js"></script>
 	<!-- endinject -->
 
 	<!-- inject:templates:js -->
-	<script src="scripts/templates-66b58904.js"></script>
+	<script src="scripts/templates-996f4ee8.js"></script>
 	<!-- endinject -->
 </body>
 
