--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,10 @@
 	<!--<script src="app.js"></script>
 	<script scr="/components/sellers/SellersController.js"</script>-->
 	
-	<!--<script src="src/vendor/jquery/dist/jquery.js"></script>-->
+	<!--<script src="src/vendor/jquery/dist/jquery.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">-->
+	<link rel="stylesheet" type="text/css" href="/src/vendor/bootstrap/dist/css/bootstrap.css">
 </head>
 <body>
 	<main class="container-fluid col-lg-10 col-lg-offset-1" style="padding-top: 50px; padding-bottom: 50px">
